<resources>
    <string name="app_name">Submission2</string>
    <string name="movie">MOVIES</string>
    <string name="tv_show">TV SHOWS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_movies">Movie Name</string>
    <string name="name_tvshows">TV Show Name</string>
    <string name="rating_movies">User Score</string>
    <string name="language_movies">Language</string>
    <string name="runtime_movies">Runtime</string>
    <string name="crew_movies">Featured Crew</string>
    <string name="genre_movies">Genres</string>
    <string name="overview_movies">Overview</string>
    <string name="keyword_movies">Keywords</string>
    <string name="poster_movies">Movie Poster</string>
    <string name="lorem">lorem ipsum dolor sit amet</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string-array name="data_name_movies">
        <item>Aquaman (2018)</item>
        <item>Avengers: Infinity War (2018)</item>
        <item>Bumblebee (2018)</item>
        <item>Creed II (2018)</item>
        <item>Once Upon a Deadpool (2018)</item>
        <item>Dragon Ball Super: Broly (2018)</item>
        <item>Glass (2019)</item>
        <item>Mortal Engines (2018)</item>
        <item>Robin Hood (2018)</item>
        <item>Spider-Man: Into the Spider-Verse (2018)</item>
        <item>Venom (2018)</item>
    </string-array>
    <string-array name="data_name_tvshows">
        <item>Arrow (2012)</item>
        <item>Doom Patrol (2019)</item>
        <item>Dragon Ball (1986)</item>
        <item>Fairy Tail (2009)</item>
        <item>The Flash (2014)</item>
        <item>Gotham (2014)</item>
        <item>Marvels Iron Fist (2017)</item>
        <item>Naruto Shippūden (2007)</item>
        <item>Supergirl (2015)</item>
        <item>Supernatural (2005)</item>
        <item>The Simpsons (1989)</item>
    </string-array>
    <string-array name="data_language_movies">
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>Japanese</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
    </string-array>
    <string-array name="data_language_tvshows">
        <item>English</item>
        <item>English</item>
        <item>Japanese</item>
        <item>Japanese</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>Japanese</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
    </string-array>
    <string-array name="data_runtime_movies">
        <item>2h 24m</item>
        <item>2h 29m</item>
        <item>1h 54m</item>
        <item>2h 10m</item>
        <item>1h 57m</item>
        <item>1h 41m</item>
        <item>2h 9m</item>
        <item>2h 9m</item>
        <item>1h 56m</item>
        <item>1h 57m</item>
        <item>1h 52m</item>
    </string-array>
    <string-array name="data_runtime_tvshows">
        <item>42m</item>
        <item>60m</item>
        <item>25m</item>
        <item>25m</item>
        <item>44m</item>
        <item>43m, 60m</item>
        <item>55m</item>
        <item>22m</item>
        <item>42m</item>
        <item>45m</item>
        <item>22m</item>
    </string-array>
    <string-array name="data_rating_movies">
        <item>68% User Score</item>
        <item>83% User Score</item>
        <item>65% User Score</item>
        <item>67% User Score</item>
        <item>69% User Score</item>
        <item>74% User Score</item>
        <item>65% User Score</item>
        <item>60% User Score</item>
        <item>58% User Score</item>
        <item>84% User Score</item>
        <item>66% User Score</item>
    </string-array>
    <string-array name="data_rating_tvshows">
        <item>58% User Score</item>
        <item>62% User Score</item>
        <item>70% User Score</item>
        <item>64% User Score</item>
        <item>66% User Score</item>
        <item>68% User Score</item>
        <item>61% User Score</item>
        <item>75% User Score</item>
        <item>58% User Score</item>
        <item>73% User Score</item>
        <item>71% User Score</item>
    </string-array>
    <string-array name="data_crew_movies">
        <item>James Wan, Will Beall, Paul Norris, Mort Weisinger, David Leslie Johnson-McGoldrick, Geoff Johns</item>
        <item>Joe Russo, Anthony Russo, Stephen McFeely, Christopher Markus</item>
        <item>Christina Hodson, Travis Knight</item>
        <item>Sylvester Stallone, Steven Caple Jr., Juel Taylor, Sascha Penn, Cheo Hodari Coker</item>
        <item>David Leitch, Paul Wernick, Ryan Reynolds, Rhett Reese</item>
        <item>Akira Toriyama, Tatsuya Nagamine</item>
        <item>M. Night Shyamalan</item>
        <item>Christian Rivers, Philip Reeve, Philippa Boyens, Fran Walsh, Peter Jackson</item>
        <item>Ben Chandler, Otto Bathurst, David James Kelly</item>
        <item>Rodney Rothman, Phil Lord, Steve Ditko, Stan Lee, Bob Persichetti, Peter Ramsey</item>
        <item>Ruben Fleischer, Mike Zeck, David Michelinie, Todd McFarlane, Kelly Marcel, Jeff Pinkner, Scott Rosenberg</item>
    </string-array>
    <string-array name="data_crew_tvshows">
        <item>Greg Berlanti, Marc Guggenheim, Andrew Kreisberg</item>
        <item>Jeremy Carver</item>
        <item>Akira Toriyama</item>
        <item>Tetsuya Kakihara</item>
        <item>Geoff Johns, Andrew Kreisberg</item>
        <item>Bruno Heller</item>
        <item>Scott Buck</item>
        <item>Junko Takeuchi</item>
        <item>Greg Berlanti, Andrew Kreisberg</item>
        <item>Eric Kripke</item>
        <item>Matt Groening</item>
    </string-array>
    <string-array name="data_genres_movies">
        <item>Action, Adventure, Fantacy</item>
        <item>Adventure, Action, Fantacy</item>
        <item>Action, Adventure, Science fiction</item>
        <item>Drama</item>
        <item>Comedy, Action</item>
        <item>Action, Animation, Fantasy, Adventure, Comedy, Science fiction</item>
        <item>Thriller, Drama, Science fiction</item>
        <item>Adventure, Fantacy</item>
        <item>Adventure, Action, Thriller</item>
        <item>Action, Adventure, Animation, Science fiction, Comedy</item>
        <item>Action, Science Fiction</item>
    </string-array>
    <string-array name="data_genres_tvshows">
        <item>Crime, Drama, Mystery, Action, Adventure</item>
        <item>SCI-FI, Fantasy, Action, Adventure</item>
        <item>Comedy, SCI-FI, Fantasy, Animation, Action, Adventure</item>
        <item>Action, Adventure, Animation, SCI-FI, Fantasy</item>
        <item>Drama, SCI-FI, Fantasy</item>
        <item>Drama, Fantasy, Crime</item>
        <item>Action, Adventure, Crime, Drama, SCI-FI, Fantasy</item>
        <item>Animation, Comedy, Drama</item>
        <item>Action, Adventure, Drama, Science fiction</item>
        <item>Drama, Mystery, SCI-FI, Fantasy</item>
        <item>Animation, Comedy</item>
    </string-array>
    <string-array name="data_keywords_movies">
        <item>DC comics, Atlantis, Half-brother, Superhero, Based on comic, Royalty, Shark, DC extended universe</item>
        <item>Magic, Sacrifice, Superhero, Based on comic, Space, Battlefield, Marvel cinematic universe, Magical object, Super power</item>
        <item>Technology, Based on toy, Transformers, Robot, Spin off, Autobot, 1980s</item>
        <item>Ukraine, Sport, Sequel, Los angeles, Boxing, Kiev, Box ring</item>
        <item>Based on comic, Christmas</item>
        <item>Space battle, Transformation, Resurrection, Alien race</item>
        <item>Sequel, Superhero, Super power, Comic book shop, Psychiatric hospital, Mental illness, Multiple personality</item>
        <item>Based on novel or book, Dystopia, Steampunk, Wasteland, Revenge, Post-apocalyptic, Futuristic vehicle</item>
        <item>Sheriff, Robin hood, Archer, Thief, Steampunk, Nottingham, Hoodie, Middle ages, Sherwood forest, Medieval times</item>
        <item>Superhero, Based on comic, Alternate universe, Aftercreditsstinger</item>
        <item>San francisco, Spacecraft, Anti hero, Superhero, Spin off, Genetic experiment, Alien life-form, Based on comic</item>
    </string-array>
    <string-array name="data_keywords_tvshows">
        <item>DC Comic, Superhero, Based on comic, Superhero team, Masked vigilante</item>
        <item>DC Comic, Based on comic, Superhero team</item>
        <item>Martial Arts, Super Power, Anime</item>
        <item>Magic, Anthropomorphism, Based on Manga, Storytelling, Wizard, Shounen, Anime, Time skip</item>
        <item>Based on comic, DC Comic, Superhero, Speed, Super power, masked superhero</item>
        <item>DC Comic, Insane Asylum, Based on Comic, Super power, Super Villain, Origin Story</item>
        <item>Martial Arts, Superhero, Based on Comic, Super Power, Marvel cinematic universe</item>
        <item>Hero, Fight, Villain, Based on Comic, Sequel, Ninja, Naruto Shippuden, Martial arts, Ninjitsu</item>
        <item>DC Comic, Superhero, Based on Comic</item>
        <item>Monster, Angel, Supernaturel, Paranormal, Ghost, Exorcism</item>
        <item>Mother, Baby, Brother, House, Father, Sister</item>
    </string-array>
</resources>