<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".Activity.DetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constrant2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/img_detail_poster"
            android:layout_width="160dp"
            android:layout_height="240dp"
            android:contentDescription="@string/poster_movies"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/movies_poster_avengerinfinity" />

        <TextView
            android:id="@+id/txt_detail_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/img_detail_poster"
            android:text="@string/name_movies"
            android:textSize="@dimen/activity_text_size_h1"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_detail_poster"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt_detail_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_detail_name"
            android:layout_marginStart="12dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/img_detail_poster"
            android:text="@string/rating_movies"
            android:textSize="@dimen/activity_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_detail_poster"
            app:layout_constraintTop_toBottomOf="@+id/txt_detail_name"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_detail_rating"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/img_detail_poster"
            android:text="@string/language_movies"
            android:textSize="@dimen/activity_text_size_h2"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_detail_poster"
            app:layout_constraintTop_toBottomOf="@+id/txt_detail_rating"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt_detail_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginStart="12dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/img_detail_poster"
            android:text="@string/language_movies"
            android:textSize="@dimen/activity_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_detail_poster"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_detail_language"
            android:layout_marginStart="12dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/img_detail_poster"
            android:text="@string/runtime_movies"
            android:textSize="@dimen/activity_text_size_h2"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_detail_poster"
            app:layout_constraintTop_toBottomOf="@+id/txt_detail_language"
            app:layout_constraintVertical_bias="0.003" />

        <TextView
            android:id="@+id/txt_detail_runtime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_marginStart="12dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/img_detail_poster"
            android:text="@string/runtime_movies"
            android:textSize="@dimen/activity_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_detail_poster"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_detail_runtime"
            android:layout_marginStart="12dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/img_detail_poster"
            android:text="@string/genre_movies"
            android:textSize="@dimen/activity_text_size_h2"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_detail_poster"
            app:layout_constraintTop_toBottomOf="@+id/txt_detail_runtime"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt_detail_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_marginStart="12dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/img_detail_poster"
            android:text="@string/genre_movies"
            android:textSize="@dimen/activity_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_detail_poster"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/overview_movies"
        android:textSize="@dimen/activity_text_size_h2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constrant2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_detail_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/overview_movies"
        android:textSize="@dimen/activity_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/crew_movies"
        android:textSize="@dimen/activity_text_size_h2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_detail_overview"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_detail_crew"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/crew_movies"
        android:textSize="@dimen/activity_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/keyword_movies"
        android:textSize="@dimen/activity_text_size_h2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_detail_crew"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_detail_keyword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/keyword_movies"
        android:textSize="@dimen/activity_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>